<resources>
    <string name="app_name">NCODE CDA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_scanner">Select Scanner:</string>

    <string name="username_label_text">Numero de Empleado:</string>
    <string name="password_label_text">Contraseña:</string>
    <string name="login_button_text">Iniciar Sesion</string>
    <string name="logout_button_text">Cerrar Sesion</string>
    <string name="login_progress_signing_in_text">Iniciando Sesion…</string>
    <string name="login_progress_signing_out_text">Cerrando Sesion…</string>
    <string name="login_error_text">Error al iniciar sesión.\nVerifique sus credenciales.</string>

    <string name="sync_with_server_label_text">Sincronizar datos con el servidor</string>
    <string name="sync_with_server_button_text">Obtener Activos</string>
    <string name="sync_with_server_progress_text">Obteniendo informacion…</string>
    <string name="sync_error_text">Error al sincronizar</string>
    <string name="sync_success">Sincronizacion exitosa</string>

    <string name="employee_count_text">Numero de empleados: </string>
    <string name="location_count_text">Numero de ubicaciones: </string>
    <string name="asset_count_text">Numero de activos: </string>

    <string name="employee_name">Nombre del Empleado</string>
    <string name="building_name">Nombre del Edificio</string>

    <string name="new_validation_label_text">Nueva Confronta</string>
    <string name="new_validation_button_text">Iniciar Confronta</string>
    <string name="close_validation_button_text">Finalizar Confronta</string>
    <string name="send_validation_button_text">Enviar datos</string>

    <string name="old_validation_label_text">Confrontas anteriores</string>
    <string name="old_validation_button_text">Ver confrontas</string>

    <string name="user_name_label_text">Nombre de usuario:</string>
    <string name="location_name_label_text">Ubicacion:</string>
    <string name="assets_summary_label_text">Resumen de activos:</string>
    <string name="asset_number_header_text">Num. SAP</string>
    <string name="asset_description_header_text">Descripción</string>
    <string name="sync_employees">Obtener Empleados</string>
    <string name="sync_buildings">Obtener Edificios</string>
    <string name="confronta_f_sica_en_proceso">Confronta Física en proceso</string>
    <string name="hola">"Hola, "</string>
    <string name="confronta_f_sica_termianda">Confronta Terminada</string>
    <string name="confrontas_f_sicas_pendientes">Confrontas Físicas anteriores</string>
    <string name="confronta_f_sica_pendiente">Confronta Física anterior</string>
    <string name="synced_with_server">Synced with server!</string>
    <string name="opciones">Opciones</string>
    <string name="scan">Scan</string>
    <string name="continuar">Continuar</string>
    <string name="confrontas_pendientes">Confrontas pendientes</string>
    <string name="informaci_n">Información</string>
    <string name="actualizar">Actualizar</string>
    <string name="regresar">Regresar a Inicio</string>
    <string name="descargar_datos">Descargar datos</string>
    <string name="ver_confrontas">Ver Confrontas</string>
    <string name="nueva_confronta">Nueva confronta</string>
    <string name="informaci_n_de_activos">Información de Activos</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>

</resources>
