<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label_text"
                android:labelFor="@+id/userName"/>

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:autofillHints=""/>

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_label_text"
                android:labelFor="@+id/password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints=""/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:onClick="login"/>

            <TextView
                android:id="@+id/loginProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_progress_signing_in_text"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>