<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <AutoCompleteTextView
                android:id="@+id/employeeSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:completionThreshold="3"
                android:autofillHints="@string/employee_name" />

            <AutoCompleteTextView
                android:id="@+id/buildingSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:completionThreshold="3"
                android:autofillHints="@string/building_name"/>

            <Button
                android:id="@+id/startValidationButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/new_validation_button_text"
                android:visibility="gone"
                android:onClick="startValidation" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>